; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/oleaut32/extr_vartype.c_VARIANT_FromDisp.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/oleaut32/extr_vartype.c_VARIANT_FromDisp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32*, i32* }

@VARIANT_FromDisp.emptyParams = internal global %struct.TYPE_3__ zeroinitializer, align 8
@DISP_E_BADVARTYPE = common dso_local global i32 0, align 4
@DISPID_VALUE = common dso_local global i32 0, align 4
@IID_NULL = common dso_local global i32 0, align 4
@DISPATCH_PROPERTYGET = common dso_local global i32 0, align 4
@DISP_E_TYPEMISMATCH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i8*, i32, i32)* @VARIANT_FromDisp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @VARIANT_FromDisp(i32* %0, i32 %1, i8* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %15 = load i32*, i32** %7, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %19, label %17

17:                                               ; preds = %5
  %18 = load i32, i32* @DISP_E_BADVARTYPE, align 4
  store i32 %18, i32* %6, align 4
  br label %48

19:                                               ; preds = %5
  %20 = call i32 @VariantInit(i32* %12)
  %21 = load i32*, i32** %7, align 8
  %22 = load i32, i32* @DISPID_VALUE, align 4
  %23 = load i32, i32* %8, align 4
  %24 = load i32, i32* @DISPATCH_PROPERTYGET, align 4
  %25 = call i32 @IDispatch_Invoke(i32* %21, i32 %22, i32* @IID_NULL, i32 %23, i32 %24, %struct.TYPE_3__* @VARIANT_FromDisp.emptyParams, i32* %12, i32* null, i32* null)
  store i32 %25, i32* %14, align 4
  %26 = load i32, i32* %14, align 4
  %27 = call i64 @SUCCEEDED(i32 %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %44

29:                                               ; preds = %19
  %30 = call i32 @VariantInit(i32* %13)
  %31 = load i32, i32* %8, align 4
  %32 = load i32, i32* %11, align 4
  %33 = load i32, i32* %10, align 4
  %34 = call i32 @VariantChangeTypeEx(i32* %13, i32* %12, i32 %31, i32 %32, i32 %33)
  store i32 %34, i32* %14, align 4
  %35 = call i32 @VariantClear(i32* %12)
  %36 = load i32, i32* %14, align 4
  %37 = call i64 @SUCCEEDED(i32 %36)
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %43

39:                                               ; preds = %29
  %40 = load i32, i32* %10, align 4
  %41 = load i8*, i8** %9, align 8
  %42 = call i32 @VARIANT_CopyData(i32* %13, i32 %40, i8* %41)
  br label %43

43:                                               ; preds = %39, %29
  br label %46

44:                                               ; preds = %19
  %45 = load i32, i32* @DISP_E_TYPEMISMATCH, align 4
  store i32 %45, i32* %14, align 4
  br label %46

46:                                               ; preds = %44, %43
  %47 = load i32, i32* %14, align 4
  store i32 %47, i32* %6, align 4
  br label %48

48:                                               ; preds = %46, %17
  %49 = load i32, i32* %6, align 4
  ret i32 %49
}

declare dso_local i32 @VariantInit(i32*) #1

declare dso_local i32 @IDispatch_Invoke(i32*, i32, i32*, i32, i32, %struct.TYPE_3__*, i32*, i32*, i32*) #1

declare dso_local i64 @SUCCEEDED(i32) #1

declare dso_local i32 @VariantChangeTypeEx(i32*, i32*, i32, i32, i32) #1

declare dso_local i32 @VariantClear(i32*) #1

declare dso_local i32 @VARIANT_CopyData(i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
